[gd_scene load_steps=11 format=3 uid="uid://ctjg8uygft0p3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_dp5yb"]
[ext_resource type="Texture2D" uid="uid://d1ew1gw2hekdk" path="res://assets/ball.png" id="2_te8qn"]
[ext_resource type="Texture2D" uid="uid://baob1drh5sto4" path="res://assets/forcefield.png" id="3_wm0rf"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5k0bn"]
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l40kn"]
radius = 24.0

[sub_resource type="Animation" id="Animation_j86cs"]
resource_name = "lose"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_q8wa2"]
resource_name = "respawn"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"respawned"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ylxt2"]
_data = {
"lose": SubResource("Animation_j86cs"),
"respawn": SubResource("Animation_q8wa2")
}

[sub_resource type="Animation" id="Animation_3ni72"]
resource_name = "show_forcefield"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Forcefield:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ofibe"]
_data = {
"show_forcefield": SubResource("Animation_3ni72")
}

[node name="Player1" type="RigidBody2D"]
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_5k0bn")
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_dp5yb")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_te8qn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_l40kn")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 12
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ylxt2")
}

[node name="ForcefieldAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ofibe")
}

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="PusherTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Forcefield" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
texture = ExtResource("3_wm0rf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="PusherTimer" to="." method="_on_pusher_timer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
